feat: add entailment view